Introduced float to the footer

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         <a href="#"><i class="fas fa-wifi white"></i></a>
         <a href="#"><i class="fas fa-envelope white"></i></a>
       </div>
-      <div class="footer-links margin flex">
+      <div class="footer-links margin">
         <p><a href="#" class="white">EVENTS</a></p>
         <p><a href="#" class="white">ABOUT US</a></p>
         <p><a href="#" class="white">ADVERTISE</a></p>
