added a logo to the footer

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <main class=" margin">
     <div class="article-links-div margin">
       <div class="article-links article-links-style">
+        <img class="none" src="images/tnw.svg" alt="tnw log">
         <a href="#"><h2 class="white">Androld might separate emoji form OS so you can get new ones faster.</h2></a>
       </div>
       <div class="article-container">
@@ -465,7 +466,7 @@
       </div>
     </div>
     <div class="footer-2">
-      <p class="white">&copy; 2006-2020 The Next Web B.V Made with in Amsterdam. <a href="#" class="white"> Powered by</a></p>
+      <p class="white"><img src="images/tnw.svg" alt="tnw log">&copy; 2006-2020 The Next Web B.V Made with in Amsterdam. <a href="#" class="white"> Powered by</a></p>
     </div>
   </footer> 
  
